# QtZeroConf

./: avahiclient.cpp  meson.build  qzeroconf.h
example/: meson.build
